added css files

--- a/AGE Calculator/index.html
+++ b/AGE Calculator/index.html
@@ -9,10 +9,10 @@
 
 <body>
     <div id="container">
-        <h1>Welcome to Age Calculator</h1>
+           <h1>Welcome to Age Calculator</h1>
             <label>Enter your BirthDay</label>
             <input type="date" id="birthday" name="birthday">
-            <button onclick="calculateAge()">submit</button>    
+            <button class="submit_btn" onclick="calculateAge()">submit</button>    
     </div>
     <div id="displayAge">
         <p id="age"></p>
