--- a/Amazon-prime-login-page/amazon.html
+++ b/Amazon-prime-login-page/amazon.html
@@ -1,15 +1,54 @@
 <!DOCTYPE html>
 <html>
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-COMPATIBLE" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-   <link rel="stylesheet" href='./amazon.css'>
-   <title>Welcome to Prime Video</title>
-   <script src="https://code.iconify.design/1/1.0.7/iconify.min.js"></script>
-   <script src="./amazon.js"></script>
+    <link rel="stylesheet" href='./amazon.css'>
+    <title>Welcome to Prime Video</title>
+    <script src="https://code.iconify.design/1/1.0.7/iconify.min.js"></script>
 </head>
+
 <body>
 
+    <div class="prime_clone">
+        <header class="prime_header">
+            <div class = 'header_content'>
+            <div class="nav_logo">
+                <a href="https://www.primevideo.com/storefront/home/ref=atv_nb_logo" id="alogo"></a>
+            </div>
+            <div class="right">
+                <div class="lang">
+                    <div class="iconify" data-icon="bi:globe" data-inline="false"></div>
+                    <div class="role">EN</div>
+                </div>
+                <span class="sigin">
+                    <a href="https://www.primevideo.com/auth-redirect/ref=atv_nb_sign_in?signin=1&returnUrl=%2Fref%3Datv_nb_logo%3Fref_%3Datv_nb_logo"
+                        class="sigin">Sign In</a>
+                </span>
+            </div>
+        </div>
+        </header>
+        <section class="join_prime">
+            
+        </section>
+        <section class="prime_family">
+
+        </section>
+        <section class="membership">
+
+        </section>
+        <section class="tv_stick">
+
+        </section>
+        <section class="multi_content">
+
+        </section>
+        <footer></footer>
+
+    </div>
+
 </body>
+
 </html>
