added content and img for section2

--- a/Amazon-prime-login-page/amazon.html
+++ b/Amazon-prime-login-page/amazon.html
@@ -14,24 +14,31 @@
 
     <div class="prime_clone">
         <header class="prime_header">
-            <div class = 'header_content'>
-            <div class="nav_logo">
-                <a href="https://www.primevideo.com/storefront/home/ref=atv_nb_logo" id="alogo"></a>
-            </div>
-            <div class="right">
-                <div class="lang">
-                    <div class="iconify" data-icon="bi:globe" data-inline="false"></div>
-                    <div class="role">EN</div>
+            <div class='header_content'>
+                <div class="nav_logo">
+                    <a href="https://www.primevideo.com/storefront/home/ref=atv_nb_logo" id="alogo"></a>
                 </div>
-                <span class="sigin">
-                    <a href="https://www.primevideo.com/auth-redirect/ref=atv_nb_sign_in?signin=1&returnUrl=%2Fref%3Datv_nb_logo%3Fref_%3Datv_nb_logo"
-                        class="sigin">Sign In</a>
-                </span>
+                <div class="right">
+                    <div class="lang">
+                        <div class="iconify" data-icon="bi:globe" data-inline="false"></div>
+                        <div class="role">EN</div>
+                    </div>
+                    <span class="sigin">
+                        <a href="https://www.primevideo.com/auth-redirect/ref=atv_nb_sign_in?signin=1&returnUrl=%2Fref%3Datv_nb_logo%3Fref_%3Datv_nb_logo"
+                            class="sigin">Sign In</a>
+                    </span>
+                </div>
             </div>
-        </div>
         </header>
         <section class="join_prime">
-            
+            <div class="login_steps">
+                <h1>Welcome to prime Video</h1>
+                <p>Join Prime to watch latest movies, TV Shows and award winning Amazon-Originals</p>
+                <button>Login to Join Prime</button>
+            </div>
+       <div>
+
+       </div>
         </section>
         <section class="prime_family">
 
