completed join prime section

--- a/Amazon-prime-login-page/amazon.html
+++ b/Amazon-prime-login-page/amazon.html
@@ -33,8 +33,8 @@
         <section class="join_prime">
             <div class="login_steps">
                 <h1>Welcome to prime Video</h1>
-                <p>Join Prime to watch latest movies, TV Shows and award winning Amazon-Originals</p>
-                <button>Login to Join Prime</button>
+                <p class = 'join'>Join Prime to watch latest movies, TV Shows and award winning Amazon-Originals</p>
+                <button class ='join_btn'>Login to Join Prime</button>
             </div>
        <div>
 
