--- a/Amazon-prime-login-page/amazon.html
+++ b/Amazon-prime-login-page/amazon.html
@@ -41,7 +41,12 @@
        </div>
         </section>
         <section class="prime_family">
-
+          <div class="prime_family_steps">
+            <h1>Great Entertainment</h1>
+            <p class = 'membership'>With your prime membership, you have aceess to exclusive Amazon Originals,
+                Blockbuster BollyWood Movies and regional movies and more.</p>
+            <button class ='get_btn'>Get Started</button>
+          </div>
         </section>
         <section class="membership">
 
