--- a/Browser-camera/index.html
+++ b/Browser-camera/index.html
@@ -13,7 +13,9 @@
  <div class = 'filter-container'>
  </div>
 
- <div class="vedio-container"></div>
+ <div class="vedio-container">
+    <video autoplay></video>
+ </div>
  <div class="timing-container"></div>
  <div class = 'zoon-container'></div>
  <div class = 'button-container'></div>
